--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --host 0.0.0.0 --port 5004",
+    "preview": "vite preview",
     "lint": "eslint . --fix",
     "format": "prettier --write src/"
   },
